Fix: Client set to visible for better load performance

--- a/src/sections/header/Header.module.css
+++ b/src/sections/header/Header.module.css
@@ -45,6 +45,14 @@
 		cursor: pointer;
 
 		svg {
+			color: var(--color-border);
+			will-change: color;
+			transition: color 0.3s ease;
+
+			&:hover {
+				color: var(--color-primary);
+			}
+
 			@media (width < 1024px) {
 				width: clamp(2rem, 1.44rem + 2.6354vw, 3.125rem);
 			}
